src/app/styles/ui.css
#root {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

#body {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 1rem;
}

#body div {
    width: 100%;
}

.columnContainer {
    width: 100%;
    display: flex;
}

.column {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.tooltipIcon {
    height: 12px;
    width: 12px;
    margin-left: 0.5rem;
    fill: #666;
}

.tooltip {
    width: 175px !important;
    background-color: #333;
    color: white;
    padding: 0.5rem;
    border-radius: 4px;
    font-size: 12px;
}

.visually-hidden {
    clip-path: inset(100%);
    clip: rect(1px, 1px, 1px, 1px);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
}

.label {
    font-weight: bold !important;
    color: #666 !important;
}

button {
    margin: 0.5rem;
}

.footer {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0px 16px;
    color: #666;
}

.ghIcon {
    height: 16px;
    width: 16px;
    margin-left: 0.25rem;
}

.ghLink {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: #666;
}

